# fake_detection

./: .gitignore  0.2.0  Dockerfile  README.md  __init__.py  env.py  grader.py  inference.py  main.py  manual_test.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  rewards.py  tasks.py
server/: __init__.py  app.py
