# pyproject.toml — FakeNews Detection OpenEnv
# Fixes for openenv validate:
#   1. [project.scripts] now has a 'server' entry pointing to server.app:main
#   2. openenv-core>=0.2.0 added to dependencies
#   3. server/app.py created with main() function
#   4. server/app.py has if __name__ == '__main__' block

# ─────────────────────────────────────────────
# BUILD SYSTEM
# ─────────────────────────────────────────────

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "fakenews-detection-env"
version         = "0.2.3"
description     = "Social Media Fake News Detection RL Environment for OpenEnv"
readme          = "README.md"
license         = "MIT"
requires-python = ">=3.11"

authors = [
  { name = "Team OpenEnv Hackathon" }
]

keywords = [
  "openenv",
  "fake-news",
  "misinformation",
  "reinforcement-learning",
  "social-media",
  "rl-environment",
  "agent-evaluation",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
]

# ── FIX 2: openenv-core>=0.2.0 added ─────────
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.7.4",
    "openai>=1.40.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27.0"]

[tool.openenv]
name = "fakenews-detection-openenv"
version = "1.0.0"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]